--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astrojs-hyperapp",
+  "name": "@zxlabs/astrojs-hyperapp",
   "version": "0.0.1",
   "type": "module",
   "description": "Hyperapp integration for astro.build",
