--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "homepage": "https://github.com/zaceno/zx-astrojs-hyperapp#readme",
   "dependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
     "hyperapp": "^2.0.22",
     "hyperapp-jsx-pragma": "^1.3.0",
-    "undom": "^0.4.0"
+    "undom": "^0.4.0",
+    "vite": "^4.5.0"
   }
 }
