--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@babel/core": "^7.23.2",
     "@babel/plugin-transform-react-jsx": "^7.22.15",
     "hyperapp": "^2.0.22",
-    "undom": "^0.4.0",
+    "jsdom": "^22.1.0",
     "vite": "^4.5.0"
   }
 }
